--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@chakra-ui/media-query": "^3.2.8",
     "@img-comparison-slider/vue": "^7.7.0",
+    "apexcharts": "^4.6.0",
     "bootstrap": "^5.2.2",
     "bootstrap-vue-3": "^0.4.8",
+    "chart.js": "^4.4.9",
     "element-plus": "^2.2.21",
     "jquery": "^3.6.1",
     "svelte-scrollto": "^0.2.0",
